[package]
name = "shire"
version = "0.1.0"
authors = ["Willow GHOST <ghostdevbusiness@gmail.com> (willow.sh)"]
description = "Shire is a simple no fuss ddns client for cloudflare"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["full"] }
