[package]
name = "shire"
version = "1.3.2"
authors = ["Willow GHOST <ghostdevbusiness@gmail.com> (willow.sh)"]
description = "Shire is a simple no fuss ddns client for Cloudflare"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
